Thu Apr 12 13:12:16 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * po/it.po: installed new version from Lele Gaifax
  * dselect/main.cc: translate menu option as well in dme()

Wed Apr 11 12:19:25 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * dselect.main.cc: retry getch if it fails with EINTR

Sun Mar 11 19:24:58 CET 2001 peter karlsson <peterk@debian.org>

  * po/sv.po: Updated Swedish translation.

Sat Mar 10 15:59:39 CST 2001 Adam Heath <doogie@debian.org>

  * main/filesdb.c: Use a pure file descriptor, instead of a stream, to
    load the data, in ensure_packagefiles_available.

Sat Mar 10 01:33:15 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * main/main,h, main/main.c: add --no-debsig option using f_nodebsign
  * main/processarc: don't check signatures of f_nodebsign is set

Fri Mar  9 21:23:03 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * include/dpkg.h.in: add DEBSIGVERIFY
  * main/main.h, main/main.c: add bad-verify override

Fri Mar  9 19:30:22 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * scripts/controllib.pl: change outputclose to deal with comma-related
    syntax errors after processing substvars

Mon Mar  5 16:34:55 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * doc/fr/Makefile.in: add more files
  * doc/fr/dpkg.8,doc/fr/install-info.8,doc/fr/update-rc.d.8: updated
  * doc/fr/cleanup-info.8,doc/fr/dpkg-divert.8,doc/fr/dpkg-name.1,
    doc/fr/dpkg-scanpackages.8,doc/fr/dpkg-scansources.1,doc/fr/dpkg-source.1:
    added

Mon Mar  5 14:03:49 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * configure.in: add more warning flags for gcc

Sun Mar 04 21:37:34 CET 2001 peter karlsson <peterk@debian.org>

  * po/sv.po, doc/sv/dpkg.8, doc/sv/822-date.1, doc/sv/start-stop-daemon.8:
    Updated Swedish translation.
  * main/dpkg.8, utils/start-stop-daemon.8: Fixed typos.

Fri Mar  2 17:29:02 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * The Copenhagen Commit
  * ChangeLog: undo file corruption (ugh)