@@ -1,3 +1,15 @@
+Wed Apr 18 18:01:21 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/install-info.{8,pl}: modify install-info to take relative
+    filesnames, and add a --remove-exactly option to only remove exact
+    matches (Rob Browning)
+
+Sun Apr 15 22:42:11 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * config.sub, config.guess: updated
+  * archtable: add hppa64-linux-gnu
+  * po/ja.po: remove some translations that gettext can't handle on hppa
+
 Thu Apr 12 13:12:16 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * po/it.po: installed new version from Lele Gaifax
